--- a/site/index.html
+++ b/site/index.html
@@ -319,7 +319,7 @@ if (vtResponse.getStatusCode().equals(&quot;200&quot;) &amp;&amp;
     vtResponse.getTransactionStatus() == TransactionStatus.PENDING) {
 
     //handle successful Bank Transfer charge request
-    //check the redirectUrl value in the vtResponse
+    //check the redirectUrl value in the vtResponse (redirect the customer to the redirectUrl to continue the payment process)
 } else {
     //handle denied / unexpected response
 }
@@ -340,7 +340,7 @@ if (vtResponse.getStatusCode().equals(&quot;200&quot;) &amp;&amp;
     vtResponse.getTransactionStatus() == TransactionStatus.PENDING) {
 
     //handle successful Cimb Clicks charge request
-    //check the redirectUrl value in the vtResponse
+    //check the redirectUrl value in the vtResponse (redirect the customer to the redirectUrl to continue the payment process)
 } else {
     //handle denied / unexpected response
 }
