update bca klikpay and klik bca docs

--- a/site/index.html
+++ b/site/index.html
@@ -469,6 +469,7 @@ if (vtResponse.getStatusCode().equals(&quot;200&quot;) &amp;&amp;
     vtResponse.getTransactionStatus() == TransactionStatus.PENDING) {
 
     //handle successful  BCA Klikpay charge request
+    //check the redirectUrl value in the vtResponse (redirect the customer to the redirectUrl to continue the payment process)
 } else {
     //handle denied / unexpected response
 }
@@ -490,6 +491,7 @@ if (vtResponse.getStatusCode().equals(&quot;200&quot;) &amp;&amp;
     vtResponse.getTransactionStatus() == TransactionStatus.PENDING) {
 
     //handle successful  BCA Klikpay charge request
+    //show instruction to customer on how to pay with klikbca
 } else {
     //handle denied / unexpected response
 }
