Change secure charge to PAN charge

--- a/site/index.html
+++ b/site/index.html
@@ -451,7 +451,7 @@ if (vtResponseCapture.getStatusCode().equals(&quot;200&quot;) &amp;&amp;
 }
 </code></pre>
 
-<h5 id="secure-charge-coming-soon">Secure Charge <strong><em><code>Coming soon</code></em></strong></h5>
+<h5 id="pan-charge-coming-soon">PAN Charge <strong><em><code>Coming soon</code></em></strong></h5>
 <p><strong><em><code>Only allowed for certain merchant</code></em></strong><br />
 For PCIDSS compliance merchant, it will be able to charge credit card transaction using customer credit card data instead of using token.</p>
 <p><br/></p>
